[fix] Extraction (SFA / Adagio): Extraction on SL_RAW failed in timeout (need to skip BATCH view) - close #sumaris-app/477 [enh] Upgrade to XmlQuery 3.6